--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cross-env": "^7.0.1",
+    "cross-env": "^7.0.2",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-ip": "^1.0.4",
     "express-promise-router": "^3.0.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.3",
+    "md5": "^2.2.1",
+    "mongoose": "^5.9.6",
     "mongoose-mongodb-errors": "^0.0.2",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
